--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "chaser",
   "version": "0.1.0",
-  "engines": {
-    "node": "15.x",
-    "npm": "7.5.x"
-  },
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -17,6 +13,7 @@
     "firebase-admin": "^9.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-youtube": "^7.13.1",
